--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,7 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - main
 env:
-  REACT_APP_VERSION: ${{ secrets.REACT_APP_VERSION }}
+  REACT_APP_VERSION: ${{ vars.REACT_APP_VERSION }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
